feat: added additional details to About Me section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <section>
         <h2>About Me</h2>
         <p>I am a student learning web development and version control using Git and GitHub.</p>
+        <p>I am currently improving my skills in HTML, Git, and software development practices.</p>
+
     </section>
 
     <article>
