--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <article>
-        <h3>Latest Project</h3>
+        <h3>LATEST PROJECT</h3>
         <p>This project is a semantic HTML portfolio page demonstrating proper structure and clean markup.</p>
     </article>
 </main>
